<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/materia"
        android:textSize="15dp"
        android:textStyle="normal"
        android:textColor="@android:color/white" />
    
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/iteracion"
            android:textAppearance="?android:attr/textAppearanceMedium"
        	android:background="@drawable/border"
        	android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/valor_x"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:gravity="center"
            android:background="@drawable/border"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/valor_fx"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center"
            android:background="@drawable/border"
            android:textColor="@android:color/white" />
    </TableRow>
    
    <LinearLayout 
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableLayout
                    android:id="@+id/table"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="0,1,2" >

                </TableLayout>

            </LinearLayout>
        </ScrollView>
        
    </LinearLayout>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/calcular" />

</LinearLayout>