<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="30dp"
        android:textStyle="bold" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/materia"
        android:textSize="15dp"
        android:textStyle="normal" />

    <SeekBar
        android:id="@+id/Barra2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/tvPrecision2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/matriz_res"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_gravity="center" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp" >

            <TableLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" >

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/a0" />

                    <TextView
                        android:id="@+id/tvA0"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/white" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/a1" />

                    <TextView
                        android:id="@+id/tvA1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/white" />

                </TableRow>
                
                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" >

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/a2" />

                    <TextView
                        android:id="@+id/tvA2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/white" />

                </TableRow>
                
            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" >
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/regresar" />

        <Button
            android:id="@+id/btnPrincipal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/principal" />
    </TableRow>

</LinearLayout>