<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/materia"
        android:textSize="15dp"
        android:textStyle="normal"
        android:textColor="@android:color/white" />

    <SeekBar
        android:id="@+id/Barra"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/tvPrecision"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/resultados"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />
    </TableRow>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp" >

            <TableLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" >

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sum_i" />

                    <TextView
                        android:id="@+id/tvSum1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/white" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sum_fi" />

                    <TextView
                        android:id="@+id/tvSum2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/white" />
                </TableRow>
                
                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" >

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sum_i2" />

                    <TextView
                        android:id="@+id/tvSum3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/white" />
                </TableRow>
                
                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" >

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sum_i3" />

                    <TextView
                        android:id="@+id/tvSum4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/white" />
                </TableRow>
                
                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" >

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sum_i4" />

                    <TextView
                        android:id="@+id/tvSum5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/white" />
                </TableRow>
                
                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" >

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sum_fi_i" />

                    <TextView
                        android:id="@+id/tvSum6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/white" />
                </TableRow>
                
                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" >

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sum_fi_i2" />

                    <TextView
                        android:id="@+id/tvSum7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/white" />
                </TableRow>
                
                <TableRow
                    android:id="@+id/tableRow9"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" >

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sum_fi2" />

                    <TextView
                        android:id="@+id/tvSum8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/white" />
                </TableRow>
                
            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnMas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/mas_result" />

</LinearLayout>